<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFFFF"
    android:gravity="center_horizontal"
    android:orientation="vertical">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/calorie"
                        android:textColor="@color/fontGray"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/exercise_time"
                        android:textColor="@color/fontGray"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/kilometre"
                        android:textColor="@color/fontGray"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textCalorie"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textColor="@color/fontOrange"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/time"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textColor="@color/fontPink"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/distance"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textColor="@color/fontBlue"
                        android:textSize="24sp" />
                </LinearLayout>
            </LinearLayout>

            <FrameLayout
                android:id="@+id/stepCountView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.example.administrator.widgets.CircleProgressBar
                    android:id="@+id/circleProgressBar"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_gravity="center" />

                <TextView
                    android:id="@+id/stepCount"
                    android:layout_width="146dp"
                    android:layout_height="146dp"
                    android:layout_gravity="center"
                    android:background="@drawable/circle_back"
                    android:gravity="center"
                    android:textColor="@color/fontBlue"
                    android:textSize="26sp" />

                <TextView
                    android:id="@+id/tv_target_distance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="40dp"
                    android:gravity="center"
                    android:text="@string/target_distance"
                    android:textColor="@color/fontBlue"
                    android:textSize="14sp" />
            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/reset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="2dp"
                    android:background="@drawable/btn_blue_selector"
                    android:minHeight="32dp"
                    android:minWidth="120dp"
                    android:text="@string/resetBtn"
                    android:textColor="#FFFFFFFF" />

                <Button
                    android:id="@+id/btnStart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:background="@drawable/btn_blue_selector"
                    android:minHeight="32dp"
                    android:minWidth="120dp"
                    android:textColor="#FFFFFFFF" />
            </LinearLayout>


            <com.github.mikephil.charting.charts.BarChart
                android:id="@+id/chart1"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp" />

           <!-- <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/lineChart"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"  />-->


        </LinearLayout>
    </ScrollView>
</LinearLayout>
